--- a/src/twig/templates/_top.twig
+++ b/src/twig/templates/_top.twig
@@ -1,33 +1,33 @@
-<nav class="nav">
-  <div class="nav__inner container">
-    <a href="#" class="nav__logo">
-      <img src="assets/img/logo.svg" class="nav__logo-img" alt="The brand of Luxerious fashion">
+<div class="top">
+  <div class="top__inner container">
+    <a href="index.html" class="top__logo">
+      <img src="assets/img/logo.svg" class="top__logo-img" alt="The brand of Luxerious fashion">
     </a>
 
-    <div class="nav__search">
-      <svg class="nav__search-icon">
+    <div class="top__search">
+      <svg class="top__search-icon">
         <use xlink:href="assets/img/icons.svg#search"></use>
       </svg>
     </div>
 
-    <div class="nav__toggle">
-      <button type="button" class="nav__toggle-btn js-nav__toggle"></button>
+    <div class="top__toggle">
+      <button type="button" class="top__toggle-btn js-top__toggle"></button>
     </div>
 
-    <a href="#" class="nav__login">
-      <svg class="nav__login-icon">
+    <a href="#" class="top__login">
+      <svg class="top__login-icon">
         <use xlink:href="assets/img/icons.svg#user"></use>
       </svg>
     </a>
 
-    <a href="#" class="nav__basket" data-basket-amount="5">
-      <svg class="nav__basket-icon">
+    <a href="#" class="top__basket" data-basket-amount="5">
+      <svg class="top__basket-icon">
         <use xlink:href="assets/img/icons.svg#basket"></use>
       </svg>
     </a>
 
 
-    <div class="menu">
+    <nav class="menu">
       <div class="menu__title">MENU</div>
 
       <div class="menu__boxed">
@@ -101,6 +101,6 @@
           <use xlink:href="assets/img/icons.svg#close"></use>
         </svg>
       </button>
-    </div>
+    </nav>
   </div>
-</nav>
+</div>
