--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,6 @@
 // Color system
-$blackColor: #222 !default;
-$pink:    #F16D7F !default;
+$blackColor: #222;
+$pink:    #F16D7F;
 
 // Body
 $body-color: $blackColor;
@@ -8,7 +8,7 @@ $body-bg: #fff;
 
 // Typography
 $font-family-sans-serif: lato, Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-$headings-font-weight: 700 !default;
+$headings-font-weight: 700;
 
 // Links
 $link-hover-decoration: none;
