--- a/src/twig/index.twig
+++ b/src/twig/index.twig
@@ -47,9 +47,10 @@
     </div>
   </section>
 
-  <section class="product">
-    <h2 class="product__title">Featured Items</h2>
-    <p class="product__text">Shop for items based on what we product in this week</p>
+  <section class="home__products">
+    <h2 class="home__products-title">Featured Items</h2>
+
+    <p class="home__products-text">Shop for items based on what we product in this week</p>
 
     <div class="product__list">
       <div class="product__item">
@@ -208,67 +209,4 @@
     </div>
   </section>
 </main>
-
-<section class="featured">
-  <div class="featured__inner container">
-    <div class="featured__box">
-      <svg class="featured__icon">
-        <use xlink:href="assets/img/icons.svg#delivery"></use>
-      </svg>
-
-      <h3 class="featured__title">Free Delivery</h3>
-
-      <div class="featured__text">
-        Worldwide delivery on all. Authorit tively morph next-generation innovation with extensive models.
-      </div>
-    </div>
-
-    <div class="featured__box">
-      <svg class="featured__icon">
-        <use xlink:href="assets/img/icons.svg#sale"></use>
-      </svg>
-
-      <h3 class="featured__title">Sales & discounts</h3>
-
-      <div class="featured__text">
-        Worldwide delivery on all. Authorit tively morph next-generation innovation with extensive models.
-      </div>
-    </div>
-
-    <div class="featured__box">
-      <svg class="featured__icon">
-        <use xlink:href="assets/img/icons.svg#quality"></use>
-      </svg>
-
-      <h3 class="featured__title">Quality assurance</h3>
-
-      <div class="featured__text">
-        Worldwide delivery on all. Authorit tively morph next-generation innovation with extensive models.
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="subscribe">
-  <div class="subscribe__inner container">
-    <aside class="subscribe__call">
-      <img src="assets/img/media/intersect.png" alt="">
-
-      <blockquote class="subscribe__call-quote">
-        “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“
-      </blockquote>
-    </aside>
-
-    <form action="#" class="subscribe__form">
-      <h4 class="subscribe__form-title">SUBSCRIBE</h4>
-
-      <div class="subscribe__form-text">FOR OUR NEW LETTER AND PROMOTION</div>
-
-      <div class="subscribe__form-wrap">
-        <input type="email" class="subscribe__form-input form__field form__placeholder" placeholder="Enter Your Email">
-        <button class="subscribe__form-submit btn">Subscribe</button>
-      </div>
-    </form>
-  </div>
-</section>
 {% endblock %}
