--- a/src/twig/templates/_layout.twig
+++ b/src/twig/templates/_layout.twig
@@ -5,10 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta content="telephone=no" name="format-detection">
+
   <title>{{ title }}</title>
   <meta name="description" content="{{ description }}">
 
-  <link rel="stylesheet" href="assets/css/styles.min.css?ver=1.4">
+  <link rel="stylesheet" href="assets/css/styles.min.css?ver=1.5">
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -21,8 +22,8 @@
   <meta name="theme-color" content="#222222">
 </head>
 <body>
-{% block nav %}
-{% include '../templates/_nav.twig' %}
+{% block top %}
+{% include '../templates/_top.twig' %}
 {% endblock %}
 
 {% block content %}{% endblock %}
