--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
+/* Переменные цветов и перебивка настроек и Bootstrap */
 @import 'base/settings';
 
 /* BEGIN Bootstrap Reboot v5.1.3 (https://getbootstrap.com/) */
@@ -15,15 +16,45 @@
 @import "base/button";
 @import "base/forms";
 
-/* General section */
+/* components styles */
+@import "components/breadcrumb";
+@import "components/pagination";
+
+/* General section styles */
 @import "section/top";
 @import "section/menu";
 @import "section/product";
 @import "section/featured";
 @import "section/subscribe";
 @import "section/footer";
+@import "section/header__page";
+@import "section/catalog";
 
-/* Home section */
+/* Home section styles */
 @import "home/home__header";
 @import "home/home__products";
 @import "home/offers";
+
+.catalog__sorting {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+
+}
+
+.catalog__filter {
+}
+
+.catalog__filter-label {
+  font-weight: 600;
+  font-size: 14px;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+}
+
+.catalog__filter-decor {
+  width: 15px;
+  height: 15px;
+  margin-left: 11px;
+}
