--- a/src/twig/templates/_layout.twig
+++ b/src/twig/templates/_layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,7 +9,7 @@
   <title>{{ title }}</title>
   <meta name="description" content="{{ description }}">
 
-  <link rel="stylesheet" href="assets/css/styles.min.css?ver=1.5">
+  <link rel="stylesheet" href="assets/css/styles.min.css?ver=1.6">
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
