--- a/src/twig/templates/_top.twig
+++ b/src/twig/templates/_top.twig
@@ -27,6 +27,7 @@
     </a>
 
 
+    <!-- Begin float menu -->
     <nav class="menu">
       <div class="menu__title">MENU</div>
 
@@ -102,5 +103,6 @@
         </svg>
       </button>
     </nav>
+    <!-- End float menu -->
   </div>
 </div>
