--- a/src/twig/catalog.twig
+++ b/src/twig/catalog.twig
@@ -9,12 +9,238 @@
 
 <main class="catalog container">
   <div class="catalog__sorting">
-    <div class="catalog__filter">
-      <div class="catalog__filter-label">
+    <div class="filter">
+      <div class="filter__label js-filter__label">
         FILTER
-        <svg class="catalog__filter-decor">
-          <use xlink:href="assets/img/icons.svg#arrow"></use>
+        <svg class="filter__label-decor">
+          <use xlink:href="assets/img/icons.svg#filter"></use>
         </svg>
+      </div>
+
+      <div class="filter__fly">
+        <div class="filter__box">
+          <div class="filter__box-title acc acc__active js-collapse">CATEGORY</div>
+
+          <ul class="filter__menu acc__content list__unstyled">
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Accessories</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Bags</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Denim</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Hoodies & Sweatshirts</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Jackets & Coats</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Polos</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Shirts</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Shoes</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Sweaters & Knits</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">T-Shirts</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Tanks</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="filter__box">
+          <div class="filter__box-title acc js-collapse">BRAND</div>
+
+          <ul class="filter__menu acc__content list__unstyled">
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Accessories</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Bags</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Denim</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Hoodies & Sweatshirts</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Jackets & Coats</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Polos</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Shirts</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Shoes</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Sweaters & Knits</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">T-Shirts</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Tanks</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="filter__box">
+          <div class="filter__box-title acc js-collapse">DESIGNER</div>
+
+          <ul class="filter__menu acc__content list__unstyled">
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Accessories</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Bags</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Denim</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Hoodies & Sweatshirts</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Jackets & Coats</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Polos</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Shirts</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Shoes</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Sweaters & Knits</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">T-Shirts</a>
+            </li>
+            <li class="filter__menu-item">
+              <a href="#" class="filter__menu-link">Tanks</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="sorting">
+      <div class="sorting__box">
+        <div class="sorting__box-heading acc js-collapse">
+          TRENDING NOW
+          <svg class="sorting__box-decor">
+            <use xlink:href="assets/img/icons.svg#chevron"></use>
+          </svg>
+        </div>
+
+        <ul class="sorting__dropdown acc__content list__unstyled">
+          <li>
+            <label class="custom__control">
+              <input type="checkbox" class="custom__control-input">
+              <span class="custom__checkbox custom__control-label">New</span>
+            </label>
+          </li>
+          <li>
+            <label class="custom__control">
+              <input type="checkbox" class="custom__control-input">
+              <span class="custom__checkbox custom__control-label">Hit</span>
+            </label>
+          </li>
+          <li>
+            <label class="custom__control">
+              <input type="checkbox" class="custom__control-input">
+              <span class="custom__checkbox custom__control-label">Bio</span>
+            </label>
+          </li>
+        </ul>
+      </div>
+
+      <div class="sorting__box">
+        <div class="sorting__box-heading acc js-collapse">
+          SIZE
+          <svg class="sorting__box-decor">
+            <use xlink:href="assets/img/icons.svg#chevron"></use>
+          </svg>
+        </div>
+
+        <ul class="sorting__dropdown acc__content list__unstyled">
+          <li>
+            <label class="custom__control">
+              <input type="checkbox" class="custom__control-input">
+              <span class="custom__checkbox custom__control-label">XS</span>
+            </label>
+          </li>
+          <li>
+            <label class="custom__control">
+              <input type="checkbox" class="custom__control-input">
+              <span class="custom__checkbox custom__control-label">S</span>
+            </label>
+          </li>
+          <li>
+            <label class="custom__control">
+              <input type="checkbox" class="custom__control-input">
+              <span class="custom__checkbox custom__control-label">M</span>
+            </label>
+          </li>
+          <li>
+            <label class="custom__control">
+              <input type="checkbox" class="custom__control-input">
+              <span class="custom__checkbox custom__control-label">L</span>
+            </label>
+          </li>
+        </ul>
+      </div>
+
+      <div class="sorting__box">
+        <div class="sorting__box-heading acc js-collapse">
+          PRICE
+          <svg class="sorting__box-decor">
+            <use xlink:href="assets/img/icons.svg#chevron"></use>
+          </svg>
+        </div>
+
+        <ul class="sorting__dropdown acc__content list__unstyled">
+          <li>
+            <label class="custom__control">
+              <input type="radio" name="radio01" class="custom__control-input" checked>
+              <span class="custom__radio custom__control-label">up to $1 000</span>
+            </label>
+          </li>
+          <li>
+            <label class="custom__control">
+              <input type="radio" name="radio01" class="custom__control-input">
+              <span class="custom__radio custom__control-label">up to $3 000</span>
+            </label>
+          </li>
+          <li>
+            <label class="custom__control">
+              <input type="radio" name="radio01" class="custom__control-input">
+              <span class="custom__radio custom__control-label">up to $5 000</span>
+            </label>
+          </li>
+          <li>
+            <label class="custom__control">
+              <input type="radio" name="radio01" class="custom__control-input">
+              <span class="custom__radio custom__control-label">from $10 000</span>
+            </label>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
