--- a/src/styles/catalog/_sorting.scss
+++ b/src/styles/catalog/_sorting.scss
@@ -7,22 +7,15 @@
   display: flex;
   align-items: center;
   position: relative;
-
-  &:not(:last-of-type) {
-    margin-right: 19px
-  }
 }
 
 .sorting__box-heading {
-  font-size: 14px;
   color: #6F6E6E;
-  cursor: pointer;
 }
 
 .sorting__box-decor {
   width: 10px;
   height: 10px;
-  margin-left: 10px;
 }
 
 .sorting__dropdown {
@@ -31,7 +24,56 @@
   box-shadow: 6px 4px 35px rgba(#000, .21);
   position: absolute;
   z-index: 1;
-  top: 23px;
-  left: 0;
   min-width: -webkit-fill-available;
+}
+
+@media (min-width: 700px) {
+  .sorting__dropdown {
+    top: 23px;
+    font-size: 14px;
+  }
+  .sorting__box:not(:last-of-type) {
+    margin-right: 19px
+  }
+  .sorting__box-heading {
+    font-size: 14px;
+    cursor: pointer;
+  }
+  .sorting__box-decor {
+    margin-left: 10px;
+  }
+}
+
+@media (min-width: 992px) {
+  .sorting__dropdown {
+    left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .sorting__dropdown {
+    right: 0;
+  }
+}
+
+@media (max-width: 699px) {
+  .sorting__dropdown {
+    top: 35px;
+    font-size: 12px;
+  }
+  .sorting__box:not(:last-of-type) {
+    margin-right: 7px;
+  }
+  .sorting__box-heading {
+    font-size: 12px;
+  }
+  .sorting__box-decor {
+    margin-left: 6px;
+  }
+}
+
+@media (min-width: 700px) and (max-width: 991px) {
+  .sorting__box:last-of-type {
+    min-width: 125px;
+  }
 }
