--- a/src/styles/section/_catalog.scss
+++ b/src/styles/section/_catalog.scss
@@ -8,3 +8,24 @@
   display: flex;
   justify-content: center;
 }
+
+.catalog__sorting {
+  margin-bottom: 64px;
+}
+
+@media (min-width: 992px) {
+  .catalog__sorting {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 30px;
+  }
+}
+
+@media (max-width: 991px) {
+  .catalog__sorting {
+    margin-left: -15px;
+    margin-right: -15px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
