--- a/src/twig/templates/_footer.twig
+++ b/src/twig/templates/_footer.twig
@@ -1,3 +1,4 @@
+{% if featured != "false" %}
 <section class="featured">
   <div class="featured__inner container">
     <div class="featured__box">
@@ -37,6 +38,7 @@
     </div>
   </div>
 </section>
+{% endif %}
 
 <section class="subscribe">
   <div class="subscribe__inner container">
@@ -102,4 +104,4 @@
 </footer>
 
 
-<script src="assets/js/scripts.min.js?ver=1.0"></script>
+<script src="assets/js/scripts.min.js?ver=1.1"></script>
