--- a/src/twig/templates/_header__page.twig
+++ b/src/twig/templates/_header__page.twig
@@ -8,7 +8,7 @@
         <a href="index.html" class="breadcrumb__link">HOME</a>
       </li>
       <li class="breadcrumb__item">
-        <a href="#" class="breadcrumb__link">MEN</a>
+        <a href="catalog.html" class="breadcrumb__link">MEN</a>
       </li>
       <li class="breadcrumb__item breadcrumb__item__active" aria-current="page">
         NEW ARRIVALS
