Created cart page

--- a/src/styles/section/_product.scss
+++ b/src/styles/section/_product.scss
@@ -39,6 +39,10 @@
   font-weight: 400;
 }
 
+.product__boxed-link {
+  color: inherit;
+}
+
 .product__boxed-text {
   margin-bottom: 16px;
   font-weight: 300;
