--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -47,3 +47,15 @@
 
 /* Pages styles */
 @import "section/detail";
+
+
+.cart {
+}
+
+.cart__content {}
+
+.cart__products {
+  margin-bottom: 72px;
+}
+
+
