--- a/src/twig/index.twig
+++ b/src/twig/index.twig
@@ -68,7 +68,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
@@ -93,7 +95,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
@@ -118,7 +122,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
@@ -143,7 +149,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
@@ -168,7 +176,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
@@ -193,7 +203,9 @@
         </div>
 
        <div class="product__boxed">
-         <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
+         </h3>
 
          <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
