--- a/src/twig/templates/_top.twig
+++ b/src/twig/templates/_top.twig
@@ -20,7 +20,7 @@
       </svg>
     </a>
 
-    <a href="#" class="top__basket" data-basket-amount="5">
+    <a href="cart.html" class="top__basket" data-basket-amount="5">
       <svg class="top__basket-icon">
         <use xlink:href="assets/img/icons.svg#basket"></use>
       </svg>
