Fixed icons path

--- a/src/twig/catalog.twig
+++ b/src/twig/catalog.twig
@@ -14,7 +14,7 @@
       <div class="filter__label js-filter__label">
         <span class="filter__label-text">FILTER</span>
         <svg class="filter__label-decor">
-          <use xlink:href="assets/img/icons.svg#filter"></use>
+          <use xlink:href="assets/img/sprite.svg#filter"></use>
         </svg>
       </div>
 
@@ -149,7 +149,7 @@
         <div class="sorting__box-heading acc js-collapse">
           TRENDING NOW
           <svg class="sorting__box-decor">
-            <use xlink:href="assets/img/icons.svg#chevron"></use>
+            <use xlink:href="assets/img/sprite.svg#chevron"></use>
           </svg>
         </div>
 
@@ -179,7 +179,7 @@
         <div class="sorting__box-heading acc js-collapse">
           SIZE
           <svg class="sorting__box-decor">
-            <use xlink:href="assets/img/icons.svg#chevron"></use>
+            <use xlink:href="assets/img/sprite.svg#chevron"></use>
           </svg>
         </div>
 
@@ -215,7 +215,7 @@
         <div class="sorting__box-heading acc js-collapse">
           PRICE
           <svg class="sorting__box-decor">
-            <use xlink:href="assets/img/icons.svg#chevron"></use>
+            <use xlink:href="assets/img/sprite.svg#chevron"></use>
           </svg>
         </div>
 
@@ -258,7 +258,7 @@
         <div class="product__add">
           <button type="button" class="btn btn__cart">
             <svg class="btn__cart-icon">
-              <use xlink:href="assets/img/icons.svg#basket"></use>
+              <use xlink:href="assets/img/sprite.svg#basket"></use>
             </svg>
             Add to Cart
           </button>
@@ -283,7 +283,7 @@
         <div class="product__add">
           <button type="button" class="btn btn__cart">
             <svg class="btn__cart-icon">
-              <use xlink:href="assets/img/icons.svg#basket"></use>
+              <use xlink:href="assets/img/sprite.svg#basket"></use>
             </svg>
             Add to Cart
           </button>
@@ -308,7 +308,7 @@
         <div class="product__add">
           <button type="button" class="btn btn__cart">
             <svg class="btn__cart-icon">
-              <use xlink:href="assets/img/icons.svg#basket"></use>
+              <use xlink:href="assets/img/sprite.svg#basket"></use>
             </svg>
             Add to Cart
           </button>
@@ -333,7 +333,7 @@
         <div class="product__add">
           <button type="button" class="btn btn__cart">
             <svg class="btn__cart-icon">
-              <use xlink:href="assets/img/icons.svg#basket"></use>
+              <use xlink:href="assets/img/sprite.svg#basket"></use>
             </svg>
             Add to Cart
           </button>
@@ -358,7 +358,7 @@
         <div class="product__add">
           <button type="button" class="btn btn__cart">
             <svg class="btn__cart-icon">
-              <use xlink:href="assets/img/icons.svg#basket"></use>
+              <use xlink:href="assets/img/sprite.svg#basket"></use>
             </svg>
             Add to Cart
           </button>
@@ -383,7 +383,7 @@
         <div class="product__add">
           <button type="button" class="btn btn__cart">
             <svg class="btn__cart-icon">
-              <use xlink:href="assets/img/icons.svg#basket"></use>
+              <use xlink:href="assets/img/sprite.svg#basket"></use>
             </svg>
             Add to Cart
           </button>
@@ -408,7 +408,7 @@
         <div class="product__add">
           <button type="button" class="btn btn__cart">
             <svg class="btn__cart-icon">
-              <use xlink:href="assets/img/icons.svg#basket"></use>
+              <use xlink:href="assets/img/sprite.svg#basket"></use>
             </svg>
             Add to Cart
           </button>
@@ -433,7 +433,7 @@
         <div class="product__add">
           <button type="button" class="btn btn__cart">
             <svg class="btn__cart-icon">
-              <use xlink:href="assets/img/icons.svg#basket"></use>
+              <use xlink:href="assets/img/sprite.svg#basket"></use>
             </svg>
             Add to Cart
           </button>
@@ -458,7 +458,7 @@
         <div class="product__add">
           <button type="button" class="btn btn__cart">
             <svg class="btn__cart-icon">
-              <use xlink:href="assets/img/icons.svg#basket"></use>
+              <use xlink:href="assets/img/sprite.svg#basket"></use>
             </svg>
             Add to Cart
           </button>
@@ -482,7 +482,7 @@
       <li class="pagination__item">
         <a href="#" class="pagination__link pagination__link-arrow">
           <svg class="pagination__link-prev">
-            <use xlink:href="assets/img/icons.svg#arrow"></use>
+            <use xlink:href="assets/img/sprite.svg#arrow"></use>
           </svg>
         </a>
       </li>
@@ -513,7 +513,7 @@
       <li class="pagination__item">
         <a href="#" class="pagination__link pagination__link-arrow">
           <svg class="pagination__link-next">
-            <use xlink:href="assets/img/icons.svg#arrow"></use>
+            <use xlink:href="assets/img/sprite.svg#arrow"></use>
           </svg>
         </a>
       </li>
