--- a/src/twig/index.twig
+++ b/src/twig/index.twig
@@ -60,7 +60,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -87,7 +87,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -114,7 +114,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -141,7 +141,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -168,7 +168,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -195,7 +195,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
