--- a/src/twig/product.twig
+++ b/src/twig/product.twig
@@ -52,7 +52,7 @@
           <div class="sorting__box-heading acc js-collapse">
             CHOOSE COLOR
             <svg class="sorting__box-decor">
-              <use xlink:href="assets/img/icons.svg#chevron"></use>
+              <use xlink:href="assets/img/sprite.svg#chevron"></use>
             </svg>
           </div>
 
@@ -82,7 +82,7 @@
           <div class="sorting__box-heading acc js-collapse">
             CHOOSE SIZE
             <svg class="sorting__box-decor">
-              <use xlink:href="assets/img/icons.svg#chevron"></use>
+              <use xlink:href="assets/img/sprite.svg#chevron"></use>
             </svg>
           </div>
 
@@ -118,7 +118,7 @@
           <div class="sorting__box-heading acc js-collapse">
             QUANTITY
             <svg class="sorting__box-decor">
-              <use xlink:href="assets/img/icons.svg#chevron"></use>
+              <use xlink:href="assets/img/sprite.svg#chevron"></use>
             </svg>
           </div>
 
@@ -131,7 +131,7 @@
 
       <a href="#" class="btn__light btn">
         <svg class="btn__light-icon">
-          <use xlink:href="assets/img/icons.svg#basket"></use>
+          <use xlink:href="assets/img/sprite.svg#basket"></use>
         </svg>
         Add to Cart
       </a>
@@ -145,7 +145,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -170,7 +170,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
@@ -195,7 +195,7 @@
           <div class="product__add">
             <button type="button" class="btn btn__cart">
               <svg class="btn__cart-icon">
-                <use xlink:href="assets/img/icons.svg#basket"></use>
+                <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
             </button>
