--- a/src/twig/templates/_footer.twig
+++ b/src/twig/templates/_footer.twig
@@ -3,7 +3,7 @@
   <div class="featured__inner container">
     <div class="featured__box">
       <svg class="featured__icon">
-        <use xlink:href="assets/img/icons.svg#delivery"></use>
+        <use xlink:href="assets/img/sprite.svg#delivery"></use>
       </svg>
 
       <h3 class="featured__title">Free Delivery</h3>
@@ -15,7 +15,7 @@
 
     <div class="featured__box">
       <svg class="featured__icon">
-        <use xlink:href="assets/img/icons.svg#sale"></use>
+        <use xlink:href="assets/img/sprite.svg#sale"></use>
       </svg>
 
       <h3 class="featured__title">Sales & discounts</h3>
@@ -27,7 +27,7 @@
 
     <div class="featured__box">
       <svg class="featured__icon">
-        <use xlink:href="assets/img/icons.svg#quality"></use>
+        <use xlink:href="assets/img/sprite.svg#quality"></use>
       </svg>
 
       <h3 class="featured__title">Quality assurance</h3>
@@ -69,7 +69,7 @@
       <li class="footer__social-item">
         <a href="#" rel="nofollow" target="_blank">
           <svg class="footer__social-icon">
-            <use xlink:href="assets/img/icons.svg#fb"></use>
+            <use xlink:href="assets/img/sprite.svg#fb"></use>
           </svg>
         </a>
       </li>
@@ -77,7 +77,7 @@
       <li class="footer__social-item">
         <a href="#" rel="nofollow" target="_blank">
           <svg class="footer__social-icon">
-            <use xlink:href="assets/img/icons.svg#inst"></use>
+            <use xlink:href="assets/img/sprite.svg#inst"></use>
           </svg>
         </a>
       </li>
@@ -85,7 +85,7 @@
       <li class="footer__social-item">
         <a href="#" rel="nofollow" target="_blank">
           <svg class="footer__social-icon">
-            <use xlink:href="assets/img/icons.svg#pinterest"></use>
+            <use xlink:href="assets/img/sprite.svg#pinterest"></use>
           </svg>
         </a>
       </li>
@@ -93,7 +93,7 @@
       <li class="footer__social-item">
         <a href="#" rel="nofollow" target="_blank">
           <svg class="footer__social-icon">
-            <use xlink:href="assets/img/icons.svg#twitter"></use>
+            <use xlink:href="assets/img/sprite.svg#twitter"></use>
           </svg>
         </a>
       </li>
