--- a/src/styles/base/_custom-control.scss
+++ b/src/styles/base/_custom-control.scss
@@ -91,7 +91,7 @@
     height: 17px;
     top: 3px;
     border-radius: 50%;
-    border: 1px solid #EBEBEB;
+    border: 1px solid #a4a4a4;
     transition: background-color .2s ease-in-out, border-color .2s ease-in-out;
   }
 }
@@ -104,7 +104,7 @@
     height: 14px;
     top: 5px;
     background-color: #fff;
-    border: 1px solid #EBEBEB;
+    border: 1px solid #a4a4a4;
     transition: background-color .2s ease-in-out, border-color .2s ease-in-out;
   }
 
